tests/expectations/compiler/tuple/singleton_tuple_fail.out
DCE_ENABLED:
Error [EPAR0370029]: A tuple type must have at least two elements.
    --> compiler-test:6:16
     |
   6 |         let c: (u8) = (a);
     |                ^^^^

DCE_DISABLED:
Error [EPAR0370029]: A tuple type must have at least two elements.
    --> compiler-test:6:16
     |
   6 |         let c: (u8) = (a);
     |                ^^^^
